# dataset-to-field

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
models/bge-small-distilled/: config.json  tokenizer.json
scripts/: classify_all.py  classify_all_simple.py  classify_parallel.py
src/openalex_classifier/: __init__.py  classifier.py  cli.py  config.py  text.py
src/openalex_classifier/models/bge-small-distilled/: README.md
src/openalex_classifier/models/dataset-to-field/: README.md  config.json
src/openalex_classifier/models/openalex-topic-classifier/: model.safetensors  tokenizer.json
src/openalex_classifier/models/openalex-topic-classifier-finetuned/: README.md
tests/: test_classifier.py
validation/: compare_classifier_to_groundtruth.py  cwts_validation_results.json  cwts_validation_with_text.json  finetune_classifier.py  generate_llm_ground_truth.py  generate_llm_ground_truth_async.py  generate_llm_ground_truth_parallel.py  main_field.tsv  openalex_ground_truth.json  sample_domain_balanced.py  test_finetuned_model.py  validation_results.json
validation/hf_dataset/: README.md
