[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalex-topic-classifier"
version = "1.0.0"
description = "Lightweight CPU-based topic classification for scientific datasets using OpenAlex taxonomy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "James O'Neill", email = "jimnoneill@gmail.com"},
    {name = "Bhavesh Patel"}
]
maintainers = [
    {name = "James O'Neill", email = "jimnoneill@gmail.com"}
]
keywords = [
    "openalex",
    "topic-classification",
    "scientific-datasets",
    "semantic-search",
    "nlp",
    "embeddings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "faiss-cpu>=1.7.0",
    "model2vec>=0.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jimnoneill/openalex-topic-classifier"
Documentation = "https://github.com/jimnoneill/openalex-topic-classifier#readme"
Repository = "https://github.com/jimnoneill/openalex-topic-classifier"
Issues = "https://github.com/jimnoneill/openalex-topic-classifier/issues"

[project.scripts]
openalex-classify = "openalex_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openalex_classifier = [
    "py.typed",
    "models/*.csv",
    "models/*.npy",
    "models/bge-small-distilled/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

